Fix footer bug on content overflow

--- a/public/styles/smfooter.css
+++ b/public/styles/smfooter.css
@@ -1,12 +1,15 @@
 #sm-footer {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
+    margin-top: -50px;
+    z-index: 1000;
 }
 
 footer {
-    padding: 0!important;
+    padding: 0px!important;
+    margin: 0px!important;
 }
 
 .footer-copyright {
